--- a/BudgetApplication/Views/Item/AddItem.cshtml
+++ b/BudgetApplication/Views/Item/AddItem.cshtml
@@ -10,6 +10,8 @@
 {
     @Html.AntiForgeryToken()
 
+    @Html.HiddenFor(model => model.ItemId)
+
     <div class="form-group">
         <label for="exampleFormControlInput1">Name</label>
         @Html.TextBoxFor(model => model.Name, "", new { @class = "form-control", @placeholder = "Enter Item Name" })
