--- a/BudgetApplication/Views/Shared/_Layout.cshtml
+++ b/BudgetApplication/Views/Shared/_Layout.cshtml
@@ -32,7 +32,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Chart" asp-action="Home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Chart" asp-action="Data">Data</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Chart" asp-action="ChartView">Spending Analysis</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Item" asp-action="AddItem">Add New Item</a>
                         </li>
                     </ul>
                 </div>
