--- a/BudgetApplication/Views/Chart/ChartView.cshtml
+++ b/BudgetApplication/Views/Chart/ChartView.cshtml
@@ -6,29 +6,52 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <script>
-        window.onload = function () {
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/css/mdb.min.css" rel="stylesheet">
 
-            var chart = new CanvasJS.Chart("chartContainer", {
-                theme: "light1", // "light1", "light2", "dark1", "dark2"
-                exportEnabled: true,
-                animationEnabled: true,
-                title: {
-                    text: "Budget Pie Chart"
-                },
-                subtitles: [{
-                    text: "Q2, 2016"
-                }],
-                data: [{
-                    type: "pie",
-                    startAngle: 180,
-                    toolTipContent: "<b>{label}</b>: {y}%",
-                    showInLegend: "true",
-                    legendText: "{label}",
-                    indexLabel: "{label} - {y}%",
-                    dataPoints: @Html.Raw(ViewBag.DataPoints)
-                }]
-            });
+    <link href="css/table.css" rel="stylesheet>"
+
+    <!-- JQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/js/mdb.min.js"></script>
+
+    <script>
+        window.onload = function() {
+
+            var chart = new CanvasJS.Chart("chartContainer",
+                {
+                    theme: "light1", // "light1", "light2", "dark1", "dark2"
+                    exportEnabled: true,
+                    animationEnabled: true,
+                    title: {
+                        text: "Budget Pie Chart"
+                    },
+                    subtitles: [
+                        {
+                            text: "Q2, 2016"
+                        }
+                    ],
+                    data: [
+                        {
+                            type: "pie",
+                            startAngle: 180,
+                            toolTipContent: "<b>{label}</b>: {y}%",
+                            showInLegend: "true",
+                            legendText: "{label}",
+                            indexLabel: "{label} - {y}%",
+                            dataPoints: @Html.Raw(ViewBag.DataPoints)
+                        }
+                    ]
+                });
             chart.render();
 
         }
@@ -37,6 +60,10 @@
 <body>
     <div id="chartContainer" style="height: 370px; width: 100%;"></div>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+    @{
+        Html.RenderPartial("_PurchasedItemTable");
+    }
 </body>
 </html>
 
