--- a/BudgetApplication/Views/Chart/_PurchasedItemTable.cshtml
+++ b/BudgetApplication/Views/Chart/_PurchasedItemTable.cshtml
@@ -1,38 +1,41 @@
 ﻿@model IEnumerable<BudgetApplication.Models.ViewModels.ItemTableViewModel>
 
 
+<script>
+    $(document).ready(function () {
+        $('#dtBasicExample').DataTable();
+        $('.dataTables_length').addClass('bs-select');
+    });
+</script>
+
 <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
     <thead>
         <tr>
             <th class="th-sm">
-                Name
+                @Html.DisplayNameFor(model => model.ItemName)
             </th>
             <th class="th-sm">
-                Position
+                @Html.DisplayNameFor(model => model.Price)
             </th>
             <th class="th-sm">
-                Office
+                @Html.DisplayNameFor(model => model.CategoryName)
             </th>
             <th class="th-sm">
-                Age
-            </th>
-            <th class="th-sm">
-                Start date
-            </th>
-            <th class="th-sm">
-                Salary
+                @Html.DisplayNameFor(model => model.PurchasedDate)
             </th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Tiger Nixon</td>
-            <td>System Architect</td>
-            <td>Edinburgh</td>
-            <td>61</td>
-            <td>2011/04/25</td>
-            <td>$320,800</td>
-        </tr>
+        @foreach (var item in Model)
+        {
+            @Html.Hidden("id", item.ItemId)
+            <tr>
+                <td>@item.ItemName</td>
+                <td>@item.Price</td>
+                <td>@item.CategoryName</td>
+                <td>@item.PurchasedDate</td>
+            </tr>
+        }
 
     </tbody>
 </table>
