--- a/BudgetApplication/Views/Chart/ChartView.cshtml
+++ b/BudgetApplication/Views/Chart/ChartView.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<BudgetApplication.Models.ViewModels.ItemTableViewModel>
 @{
     ViewData["Title"] = "ChartView";
 }
@@ -6,23 +6,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <!-- Font Awesome -->
+    <link rel="stylesheet" href="css/site.css" />
+
+    <!-- Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/css/mdb.min.css" rel="stylesheet">
-
-    <link href="css/table.css" rel="stylesheet>"
-
-    <!-- JQuery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/js/mdb.min.js"></script>
 
     <script>
         window.onload = function() {
@@ -58,12 +49,7 @@
     </script>
 </head>
 <body>
-    <div id="chartContainer" style="height: 370px; width: 100%;"></div>
-    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-
-    @{
-        Html.RenderPartial("_PurchasedItemTable");
-    }
+    <div id="chartContainer"></div>
 </body>
 </html>
 
