--- a/BudgetApplication/Views/Chart/ChartView.cshtml
+++ b/BudgetApplication/Views/Chart/ChartView.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<BudgetApplication.Models.ViewModels.ItemTableViewModel>
 @{
     ViewData["Title"] = "ChartView";
 }
@@ -6,29 +6,36 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <script>
-        window.onload = function () {
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
-            var chart = new CanvasJS.Chart("chartContainer", {
-                theme: "light1", // "light1", "light2", "dark1", "dark2"
-                exportEnabled: true,
-                animationEnabled: true,
-                title: {
-                    text: "Budget Pie Chart"
-                },
-                subtitles: [{
-                    text: "Q2, 2016"
-                }],
-                data: [{
-                    type: "pie",
-                    startAngle: 180,
-                    toolTipContent: "<b>{label}</b>: {y}%",
-                    showInLegend: "true",
-                    legendText: "{label}",
-                    indexLabel: "{label} - {y}%",
-                    dataPoints: @Html.Raw(ViewBag.DataPoints)
-                }]
-            });
+    <script>
+        window.onload = function() {
+
+            var chart = new CanvasJS.Chart("chartContainer",
+                {
+                    theme: "light1", // "light1", "light2", "dark1", "dark2"
+                    exportEnabled: true,
+                    animationEnabled: true,
+                    title: {
+                        text: "Budget Pie Chart"
+                    },
+                    subtitles: [
+                        {
+                            text: "Q2, 2016"
+                        }
+                    ],
+                    data: [
+                        {
+                            type: "pie",
+                            startAngle: 180,
+                            toolTipContent: "<b>{label}</b>: {y}%",
+                            showInLegend: "true",
+                            legendText: "{label}",
+                            indexLabel: "{label} - {y}%",
+                            dataPoints: @Html.Raw(ViewBag.DataPoints)
+                        }
+                    ]
+                });
             chart.render();
 
         }
@@ -36,7 +43,26 @@
 </head>
 <body>
     <div id="chartContainer" style="height: 370px; width: 100%;"></div>
-    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <br />
+    <table class="table table-bordered table-responsive table-hover">
+        <tr>
+            <th>Item Name</th>
+            <th>Category Name</th>
+            <th>Price</th>
+            <th>Purchased Date</th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.ItemName</td>
+                <td>@item.CategoryName</td>
+                <td>@item.Price</td>
+                <td>@item.PurchasedDate</td>
+            </tr>
+        }
+    </table>
+
 </body>
 </html>
 
