added modal class to add items to

--- a/BudgetApplication/Views/Item/AddItem.cshtml
+++ b/BudgetApplication/Views/Item/AddItem.cshtml
@@ -13,17 +13,17 @@
     @Html.HiddenFor(model => model.ItemId)
 
     <div class="form-group">
-        <label for="exampleFormControlInput1">Name</label>
+        <label for="name">Name</label>
         @Html.TextBoxFor(model => model.Name, "", new { @class = "form-control", @placeholder = "Enter Item Name" })
     </div>
 
     <div class="form-group">
-        <label for="exampleFormControlInput1">Price</label>
-        @Html.TextBoxFor(model => model.Price, "", new { @class = "form-control", @placeholder = "Enter Price" })
+        <label for="price">Price</label>
+        @Html.TextBoxFor(model => model.Price, "", new { @class = "form-control", @placeholder = "Enter Price", @type = "number", @step = ".01"})
     </div>
 
     <div class="form-group">
-        <label for="exampleFormControlInput1">Category</label>
+        <label for="category">Category</label>
         @Html.DropDownList("Category", null, htmlAttributes: new { @class = "form-control" })
     </div>
 
