--- a/BudgetApplication/Views/Chart/ChartView.cshtml
+++ b/BudgetApplication/Views/Chart/ChartView.cshtml
@@ -69,6 +69,51 @@
                 </tr>
             }
     </table>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add-item">
+        Add New Item
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="add-item" tabindex="-1" role="dialog" aria-labelledby="add-itemlabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            @using (Html.BeginForm("AddItem", "Item", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="new-item-label">New Item</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            @Html.TextBox("Name", "", new { @class = "form-control", @placeholder = "Enter Item Name" })
+                        </div>
+
+                        <div class="form-group">
+                            <label for="price">Price</label>
+                            @Html.TextBox("Price", "", new { @class = "form-control", @placeholder = "Enter Price", @type = "number", @step = ".01" })
+                        </div>
+
+                        <div class="form-group">
+                            <label for="category">Category</label>
+                            @Html.DropDownList("Category",  null, htmlAttributes: new { @class = "form-control" })
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Add Item</button>
+                    </div>
+                </div>
+            }
+        </div>
+
+    </div>
 </body>
 </html>
 
