--- a/BudgetApplication/Views/Chart/ChartView.cshtml
+++ b/BudgetApplication/Views/Chart/ChartView.cshtml
@@ -6,12 +6,21 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+
     <link rel="stylesheet" href="css/site.css" />
 
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-
+    
+    
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" />
+    <script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" type="text/javascript"></script>
 
     <script>
+
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+
         window.onload = function() {
 
             var chart = new CanvasJS.Chart("chartContainer",
@@ -41,6 +50,7 @@
                 });
             chart.render();
 
+
         }
     </script>
 </head>
@@ -49,7 +59,7 @@
     <br />
     <br />
 
-    <table class="ui celled table">
+    <table id="myTable" class="ui celled table">
         <thead>
             <tr>
                 <th>Item Name</th>
@@ -101,7 +111,7 @@
 
                         <div class="form-group">
                             <label for="category">Category</label>
-                            @Html.DropDownList("Category",  null, htmlAttributes: new { @class = "form-control" })
+                            @Html.DropDownList("Category", null, htmlAttributes: new { @class = "form-control" })
                         </div>
 
                     </div>
