--- a/BudgetApplication/Views/Chart/_AddItem.cshtml
+++ b/BudgetApplication/Views/Chart/_AddItem.cshtml
@@ -15,15 +15,19 @@
                 <div class="modal-body">
 
                     <div class="form-group">
-                        @Html.TextBox("Name", "", new { @class = "form-control", @placeholder = "Enter Item Name"})
+                        @Html.TextBox("Name", "", new { @class = "form-control", @placeholder = "Enter Item Name" })
                     </div>
 
                     <div class="form-group">
-                        @Html.TextBox("Price", "", new { @class = "form-control", @placeholder = "Enter Price", @type = "number", @step = ".01"})
+                        @Html.TextBox("Price", "", new { @class = "form-control", @placeholder = "Enter Price", @type = "number", @step = ".01" })
                     </div>
 
                     <div class="form-group">
                         @Html.DropDownList("Category", null, htmlAttributes: new { @class = "form-control" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.Editor("DatePurchased", new { htmlAttributes = new { @class = "form-control", @name = "datetimes", @id = "datetimes" } })
                     </div>
 
                 </div>
