removed partial js code to different file

--- a/BudgetApplication/Views/Shared/_Layout.cshtml
+++ b/BudgetApplication/Views/Shared/_Layout.cshtml
@@ -76,6 +76,9 @@
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
-@RenderSection("Scripts", required: false)
+    @RenderSection("Scripts", required: false)
+    @RenderSection("gameView", required: false)
+
+
 </body>
 </html>
