--- a/BudgetApplication/Views/Chart/ChartView.cshtml
+++ b/BudgetApplication/Views/Chart/ChartView.cshtml
@@ -7,7 +7,6 @@
 <html>
 <head>
 
-
     <!-- Donut Chart CDN -->
     <link rel="stylesheet" href="css/site.css"/>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
@@ -15,13 +14,14 @@
     <!-- DataTable CDN -->
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css"/>
+    
+    @*Adding my own js file to the View*@
+    @section gameView
+    {    
+        <script src="js/chartView.js"></script>
+    }
 
     <script>
-
-        $(document).ready(function() {
-            console.log("ready!");
-            $('#myTable').DataTable();
-        });
 
         window.onload = function() {
 
@@ -51,8 +51,6 @@
                     ]
                 });
             chart.render();
-
-
         }
     </script>
 </head>
@@ -61,32 +59,32 @@
     <br />
     <br />
 
-<table id="myTable" class="ui celled table">
-    <thead>
-    <tr>
-        <th>Item Name</th>
-        <th>Category</th>
-        <th>Price</th>
-        <th>Purchased Date</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td data-label="item-name">@item.ItemName</td>
-            <td data-label="category-name">@item.CategoryName</td>
-            <td data-label="price">$@item.Price</td>
-            <td data-label="purchased-date">@item.PurchasedDate</td>
-        </tr>
-    }
-</table>
+    <table id="myTable">
+        <thead>
+            <tr>
+                <th>Item Name</th>
+                <th>Category</th>
+                <th>Price</th>
+                <th>Purchased Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td data-label="item-name">@item.ItemName</td>
+                    <td data-label="category-name">@item.CategoryName</td>
+                    <td data-label="price">$@item.Price</td>
+                    <td data-label="purchased-date">@item.PurchasedDate</td>
+                </tr>
+            }
+    </table>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add-item">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add-item" id="modal-btn">
         Add New Item
     </button>
 
-    <partial name="_AddItem"/>
+    <partial name="_AddItem" />
 </body>
 </html>
 
