--- a/BudgetApplication/Views/Chart/_AddItem.cshtml
+++ b/BudgetApplication/Views/Chart/_AddItem.cshtml
@@ -27,7 +27,12 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.Editor("DatePurchased", new { htmlAttributes = new { @class = "form-control", @name = "datetimes", @id = "datetimes" } })
+                        <div class='input-group date' id='datetimepicker1'>
+                            <input type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
                     </div>
 
                 </div>
