integrated datepicker into application

--- a/BudgetApplication/Views/Chart/ChartView.cshtml
+++ b/BudgetApplication/Views/Chart/ChartView.cshtml
@@ -7,17 +7,22 @@
 <html>
 <head>
 
+    <!-- Datepicker CSS & JS -->
+    <link rel="stylesheet" href="css/datepicker.css">
+    <script src="js/datepicker.js"></script>
+
     <!-- Donut Chart CDN -->
-    <link rel="stylesheet" href="css/site.css"/>
+    <link rel="stylesheet" href="css/site.css" />
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
     <!-- DataTable CDN -->
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css"/>
-    
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" />
+
     @*Adding my own js file to the View*@
+
     @section gameView
-    {    
+        {
         <script src="js/chartView.js"></script>
     }
 
