--- a/BudgetApplication/Views/Chart/_AddItem.cshtml
+++ b/BudgetApplication/Views/Chart/_AddItem.cshtml
@@ -27,12 +27,7 @@
                     </div>
 
                     <div class="form-group">
-                        <div class='input-group date' id='datetimepicker1'>
-                            <input type='text' class="form-control" />
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </span>
-                        </div>
+                        <input type="text" class="form-control" data-toggle="datepicker">
                     </div>
 
                 </div>
