--- a/BudgetApplication/Views/Chart/_AddItem.cshtml
+++ b/BudgetApplication/Views/Chart/_AddItem.cshtml
@@ -15,11 +15,11 @@
                 <div class="modal-body">
 
                     <div class="form-group">
-                        @Html.TextBox("Name", "", new { @class = "form-control", @placeholder = "Enter Item Name" })
+                        @Html.TextBox("Name", "", new { @class = "form-control", @placeholder = "Item Name" })
                     </div>
 
                     <div class="form-group">
-                        @Html.TextBox("Price", "", new { @class = "form-control", @placeholder = "Enter Price", @type = "number", @step = ".01" })
+                        @Html.TextBox("Price", "", new { @class = "form-control", @placeholder = "Price", @type = "number", @step = ".01" })
                     </div>
 
                     <div class="form-group">
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="text" class="form-control" data-toggle="datepicker">
+                        <input type="text" class="form-control" data-toggle="datepicker" name="PurchaseDate" id="PurchaseDate">
                     </div>
 
                 </div>
