monthly spending for year implemented in controller

--- a/BudgetApplication/Views/Shared/_Layout.cshtml
+++ b/BudgetApplication/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Chart" asp-action="Home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Chart" asp-action="ChartView">Spending Analysis</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SpendingAnalysis" asp-action="SpendingPerMonth">Monthly Analysis</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Item" asp-action="AddItem">Add New Item</a>
