graph showing but wrong datapoints

--- a/BudgetApplication/Views/SpendingAnalysis/SpendingPerMonth.cshtml
+++ b/BudgetApplication/Views/SpendingAnalysis/SpendingPerMonth.cshtml
@@ -6,17 +6,65 @@
 
 <head>
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             console.log("ready!");
+        });
+
+        window.onload = function () {
+
             var url = '@Url.Action("GetMonthlySpendingByYear")';
             $.get(url,
                 function(data) {
-                    console.log(data);
+                    drawSpendingpGraph(data.monthNames, data.monthlySpending);
                 });
-        });
+
+            var spendingGraph = document.getElementById('monthlySpending').getContext('2d');
+
+            function drawSpendingpGraph(dt, lb) {
+                new Chart(spendingGraph,
+                    {
+                        type: 'line',
+                        data: {
+                            labels: lb,
+                            datasets: [
+                                {
+                                    data: dt,
+                                    label: "Dollars",
+                                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                    borderColor: 'rgba(255, 99, 132, 1)',
+                                    fill: false
+                                }
+                            ]
+                        },
+                        options: {
+                            title: {
+                                display: true,
+                                text: "Total Monthly Spending"
+                            },
+                            scales: {
+                                yAxes: [
+                                    {
+                                        ticks: {
+                                            max: 1000,
+                                            min: 0
+                                        }
+                                    }
+                                ]
+                            }
+                        }
+                    });
+            }
+        }
+
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
 </head>
 <body>
-<h1>SpendingPerMonth</h1>
+    <h1>SpendingPerMonth</h1>
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <canvas id="monthlySpending" width="400" height="400"></canvas>
+        </div>
+    </div>
 </body>
 
