--- a/BudgetApplication/Views/Shared/_Layout.cshtml
+++ b/BudgetApplication/Views/Shared/_Layout.cshtml
@@ -78,6 +78,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
     @RenderSection("gameView", required: false)
+    @RenderSection("s", required: false)
 
 
 </body>
