--- a/BudgetApplication/Views/SpendingAnalysis/SpendingPerMonth.cshtml
+++ b/BudgetApplication/Views/SpendingAnalysis/SpendingPerMonth.cshtml
@@ -1,61 +1,17 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity.UI.V3.Pages.Internal
+
 @{
     ViewData["Title"] = "SpendingPerMonth";
 }
 
 
 <head>
-    <script>
-        $(document).ready(function() {
-            console.log("ready!");
-        });
-
-
-        window.onload = function () {
-
-            var url = '@Url.Action("GetMonthlySpendingByYear")';
-            $.get(url,
-                function(data) {
-                    console.log(data);
-
-                    var ctx = document.getElementById('myChart');
-                    var myChart = new Chart(ctx, {
-                        type: 'line',
-                        data: {
-                            labels: data.monthNames,
-                            datasets: [{
-                                label: 'Total Spending By Month (in USD$)',
-                                data: data.monthlySpending,
-                                backgroundColor: [
-                                    'rgba(54, 162, 235, 0.2)'
-                                ],
-                                borderColor: [
-                                    'rgba(54, 162, 235, 1)'
-                                ]
-                            }]
-
-                            
-
-                        },
-                        options: {
-                            scales: {
-                                yAxes: [{
-                                    ticks: {
-                                        beginAtZero: true
-                                    }
-                                }]
-
-                            }
-                        }
-                    });
-                });
-
-            
-
-        }
-
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
+    @section s
+    {
+        <script src="js/s.js"></script>
+    }
+
 </head>
 <body>
     <h1>SpendingPerMonth</h1>
