added actionmethod for creating new category

--- a/BudgetApplication/Views/Shared/_Layout.cshtml
+++ b/BudgetApplication/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="SpendingAnalysis" asp-action="SpendingPerMonth">Monthly Analysis</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Item" asp-action="AddItem">Add New Item</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="AddNewCategory">Add New Item</a>
                         </li>
                     </ul>
                 </div>
